data/derived/sp14/progs/unify/prog4686.ml.out
Characters 68-82:
  | n -> digitsOfInt(n) :: [];;
         ^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
